cmake_minimum_required(VERSION 3.8)
project(my_auto_nav_pkg)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_action REQUIRED)
find_package(nav2_core REQUIRED)
find_package(nav2_costmap_2d REQUIRED)
find_package(nav2_util REQUIRED)
find_package(nav2_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)

add_library(my_auto_nav_astar_lib SHARED src/astar_planner.cpp) 
ament_target_dependencies(my_auto_nav_astar_lib
  rclcpp
  rclcpp_action
  nav2_core
  nav2_costmap_2d
  nav2_util
  nav2_msgs
  geometry_msgs
  tf2
  tf2_ros
  tf2_geometry_msgs
)

add_library(my_auto_nav_pure_pursuit_lib SHARED src/pure_pursuit.cpp) 
ament_target_dependencies(my_auto_nav_pure_pursuit_lib
  rclcpp
  rclcpp_action
  nav2_core
  nav2_costmap_2d
  nav2_util
  nav2_msgs
  geometry_msgs
  tf2
  tf2_ros
  tf2_geometry_msgs
)

install(
  TARGETS 
  my_auto_nav_astar_lib 
  my_auto_nav_pure_pursuit_lib
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)

pluginlib_export_plugin_description_file(nav2_core nav2_plugins.xml)

install(FILES
  nav2_plugins.xml
  DESTINATION share/${PROJECT_NAME}
)

install(DIRECTORY
  launch
  config
  behavior_tree
  DESTINATION share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
